--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
     "@angular/platform-browser": "~7.1.4",
     "@angular/platform-browser-dynamic": "~7.1.4",
     "@angular/router": "~7.1.4",
+    "@ionic-native/action-sheet": "^5.0.0-beta.24",
+    "@ionic-native/android-exoplayer": "^5.0.0-beta.24",
+    "@ionic-native/android-fingerprint-auth": "^5.0.0-beta.24",
+    "@ionic-native/camera": "^5.0.0-beta.24",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/fingerprint-aio": "^5.0.0-beta.24",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.0",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-fingerprint-aio": "1.5.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -54,5 +61,11 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-fingerprint-aio": {}
+    }
+  }
 }
