--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
     "@angular/platform-browser-dynamic": "~7.1.4",
     "@angular/router": "~7.1.4",
     "@ionic-native/action-sheet": "^5.0.0-beta.24",
-    "@ionic-native/android-exoplayer": "^5.0.0-beta.24",
-    "@ionic-native/android-fingerprint-auth": "^5.0.0-beta.24",
     "@ionic-native/camera": "^5.0.0-beta.24",
     "@ionic-native/core": "5.0.0-beta.21",
-    "@ionic-native/fingerprint-aio": "^5.0.0-beta.24",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
-    "@ionic-native/status-bar": "5.0.0-beta.21",
+    "@ionic-native/status-bar": "^5.0.0-beta.24",
     "@ionic/angular": "4.0.0-rc.0",
     "cordova-plugin-camera": "4.0.3",
-    "cordova-plugin-fingerprint-aio": "1.5.0",
+    "cordova-plugin-statusbar": "2.4.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -65,7 +62,7 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
-      "cordova-plugin-fingerprint-aio": {}
+      "cordova-plugin-statusbar": {}
     }
   }
 }
