--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "^5.0.0-beta.24",
-    "@ionic/angular": "4.0.0-rc.0",
+    "@ionic/angular": "^4.4.0",
+    "@ionic/core": "^4.4.0",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-statusbar": "2.4.2",
     "core-js": "^2.5.4",
