--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-statusbar": "2.4.2",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
